fix extra scrollbars

--- a/yew_frontend/static/styles.css
+++ b/yew_frontend/static/styles.css
@@ -8,6 +8,10 @@ body {
     flex-direction: column;
 }
 
+html {
+    overflow: hidden !important;
+}
+
 .full_height_scrollable {
     overflow-y: auto;
     display: flex;
